--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-assets:
-  - /data.json
-  - /images/*
+  assets:
+    - assets/data.json
+    - assets/images/
